# agentctl

./: .env.example  .gitignore  README.md  docker-compose.yml
contracts/agent-step/: support-ticket-draft-request.json  support-ticket-draft-response.json  support-ticket-execute-fake-request.json  support-ticket-execute-fake-response.json
docs/adr/: 0001-agent-tool-execution-boundary.md
docs/prd/: agentctl-platform.md  m1-m2-foundation.md  m4-agent-step-protocol.md  m5-agent-tool-execution-boundary.md  m5-support-ticket-v1.md
docs/prd/agents/: github-ops-ticket-to-pr-agent.md  incident-agent.md  support-ticket-agent.md
infra/otel/: otel-collector-config.yaml
infra/tempo/: tempo.yaml
scripts/: check-compose-contract.mjs
services/agent-worker/: .dockerignore  Dockerfile  pyproject.toml
services/agent-worker/src/agentctl_agent_worker/: __init__.py  app.py  fake_ticketing.py  health.py  main.py  protocol.py  support_ticket.py
services/agent-worker/tests/: test_agent_step_fixtures.py  test_agent_steps.py  test_fake_ticketing.py  test_health.py  test_support_ticket_execute.py
services/api/: .dockerignore  Dockerfile  pom.xml
services/api/src/main/resources/: application.yaml
services/api/src/main/resources/db/migration/: V1__control_plane_projection_schema.sql  V2__agent_step_projection_schema.sql  (+1 more)
services/api/src/test/resources/: application.yaml
services/web/: Dockerfile  next.config.mjs  package-lock.json  package.json
services/web/app/: globals.css  layout.tsx  page.tsx
services/web/scripts/: check-dashboard-contract.mjs
(+50 files in other folders)
