[project]
name = "agentctl-agent-worker"
version = "0.1.0"
description = "agentctl Python LangGraph agent worker shell"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agentctl-agent-worker = "agentctl_agent_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentctl_agent_worker"]
